fixed word-wrap issue.

--- a/template/css/reset.css
+++ b/template/css/reset.css
@@ -18,6 +18,7 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+	word-wrap: break-word;
 }
 *:focus {
 	outline: none;
